k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kcca-backend
spec:
  selector:
    app: kcca-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
