k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kcca-frontend
spec:
  selector:
    app: kcca-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
